[gd_scene load_steps=4 format=2]

[ext_resource path="res://FlaxMachine/MachineAssets/conveyor_merger.svg" type="Texture" id=1]
[ext_resource path="res://FlaxMachine/MachineScript/ConveyorMerger.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[node name="ConveyorMerger" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_ConveyorMerger_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ConveyorMerger_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ConveyorMerger_mouse_exited"]
